--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,8 +21,10 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  
   flutter:
     sdk: flutter
+    
     
 
 
@@ -31,6 +33,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^2.0.0
   grouped_list: ^4.0.0
+  cached_network_image: ^3.0.0
+  
 
 dev_dependencies:
   flutter_test:
@@ -49,7 +53,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
    assets:
-    - assets/images/
+    - images/
+   
     
 
   # An image asset can refer to one or more resolution-specific "variants", see
